needs a bit more fixing but it will do.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,27 @@
         </ul>
     </header>
     <img id="google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
-    <input class="search" type="text">
+
+    <form class="search-form">
+        <span class="material-icons search-icon">search</span>
+        <input class="search" type="text">
+        <span class="material-icons mic-icon">mic</span>
+    </form>
+
+    <div class="buttons">
+        <button class="button">Google Search</button>
+        <button class="button">I'm Feeling Lucky</button>
+    </div>
+    <footer>
+        <ul>
+            <li class ="left" ><a href="">Advertising</a></li>
+            <li class ="left" ><a href="">Business</a></li>
+            <li class="left"><a href="">How Search Works</a></li>
+            <li class="right"><a href="">Settings</a></li>
+            <li class="right"><a href="">Terms</a></li>
+            <li class="right"><a href="">Privacy</a></li>
+
+        </ul>
+    </footer>
 </body>
 </html>
